Validation: 오류 코드와 메시지 처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 #logging.level.org.apache.coyote.http11=debug
+# messages와 errors 두 곳 모두 찾아 쓰도록 설정한다.
+# 생략하면 기본값인 messages만 읽어들인다.
+spring.messages.basename=messages,errors
